--- a/pages/saturno.html
+++ b/pages/saturno.html
@@ -93,12 +93,15 @@
       <div id="creditos">
         <p>CRÉDITOS</p>
         <p>
-          En el desarrollo de esta página web participaron los programadores Diego, Eduardo y Jorge junto
-          con los estudiantes de Marina Martínez Bonat 3º de ESO A, B y C, y los alumnos de Alicia Portero Hernández del
-          IES Juan Bosco de Alcázar de San Juan. Agradecemos especialmente a María Teresa Olmedilla Escribano por su
-          apoyo y orientación.
+            Proyecto: Create an Orrery Web App that Displays Near-Earth Objects
+            Evento: NASA Space Apps Challenge 2024
+  
+             Participantes:
+  
+            Estudiantes de Ingeniería en Ciberseguridad y Biotecnología
+            Universidad de las Américas, Ecuador
         </p>
-      </div>
+    </div>
       <ul class="wrapper">
         <li class="icon github">
           <span class="tipo">Esteban</span>
