--- a/pages/urano.html
+++ b/pages/urano.html
@@ -118,18 +118,15 @@
     </div>
     <footer>
       <div id="contenidoFooter">
-        <div id="creditos">
-                <p>CRÉDITOS</p>
-                <p>
-                    Proyecto: Create an Orrery Web App that Displays Near-Earth Objects
-                    Evento: NASA Space Apps Challenge 2024
+        <p>CRÉDITOS</p>
+        <p>
+          Proyecto: Create an Orrery Web App that Displays Near-Earth Objects
+          Evento: NASA Space Apps Challenge 2024
           
-                     Participantes:
+          Participantes:
           
-                    Estudiantes de Ingeniería en Ciberseguridad y Biotecnología
-                    Universidad de las Américas, Ecuador
-                </p>
-            </div>
+              Estudiantes de Ingeniería en Ciberseguridad de cuarto semestre en la Universidad de las Amâricas, Ecuador
+        </p>
         <ul class="wrapper">
           <li class="icon github">
             <span class="tipo">Esteban</span>
