actulizacion y implementacion de sistema 3d

--- a/pages/mercurio.html
+++ b/pages/mercurio.html
@@ -76,7 +76,7 @@
         </article>
       </section>
       <div id="menu">
-          <a class="btn" id="btn1" href="../index.html">Sol</a>
+          <a class="btn" id="btn1" href="sol.html">Sol</a>
           <a class="btn" id="btn2" href="./venus.html">Venus</a>
       </div>
     </main>
