--- a/pages/sol.html
+++ b/pages/sol.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles-main.css">
+  <link rel="stylesheet" href="/css/styles-main.css">
   <link rel="shortcut icon" href="assets/icons/iconsCosmos.ico" type="image/x-icon">
-  <title>El sistema solar &#9728;</title>
+  <title>sol &#9728;</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
@@ -15,7 +14,7 @@
 <body>
   <header>
     <div id="logotipo">
-      <a href="index.html">
+      <a href="sol.html">
         <div class="logo">
           <span>N</span>
           <span>A</span>
@@ -33,26 +32,25 @@
         </div>
       </a>
       <div id="logoCentro">
-        <a href="https://www.udla.edu.ec/" target="_blank"><img src="assets/images/udla.png" alt="Logo UDLA"></a>
+        <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png" alt="Logo UDLA"></a>
       </div>
     </div>
     <span id="btnMenu"><i class="fas fa-bars"></i></span>
     <nav>
       <ul class="menu" id="menu">
-        <li><a href="./pages/mercurio.html">Mercurio</a></li>
-        <li><a href="./pages/venus.html">Venus</a></li>
-        <li><a href="./pages/tierra.html">Tierra</a></li>
-        <li><a href="./pages/luna.html">Luna</a></li>
-        <li><a href="./pages/marte.html">Marte</a></li>
-        <li><a href="./pages/jupiter.html">Júpiter</a></li>
-        <li><a href="./pages/saturno.html">Saturno</a></li>
-        <li><a href="./pages/urano.html">Urano</a></li>
-        <li><a href="./pages/neptuno.html">Neptuno</a></li>
+        <li><a href="/pages/mercurio.html">Mercurio</a></li>
+        <li><a href="/pages/venus.html">Venus</a></li>
+        <li><a href="/pages/tierra.html">Tierra</a></li>
+        <li><a href="/pages/luna.html">Luna</a></li>
+        <li><a href="/pages/marte.html">Marte</a></li>
+        <li><a href="/pages/jupiter.html">Júpiter</a></li>
+        <li><a href="/pages/saturno.html">Saturno</a></li>
+        <li><a href="/pages/urano.html">Urano</a></li>
+        <li><a href="/pages/neptuno.html">Neptuno</a></li>
       </ul>
     </nav>
   </header>
   
-
   <main>
     <section id="contenido">
       <div id="planetaContenido">
