--- a/Sistema solar 3d/index.html
+++ b/Sistema solar 3d/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title dir="ltr">Solar System 3D</title>
+    <title dir="ltr">Sistema Solar  3D</title>
     <link rel="stylesheet" href="/css/styles-main.css">
   <link rel="shortcut icon" href="assets/icons/iconsCosmos.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
@@ -17,11 +17,10 @@
     <!-- Header with logo and navigation -->
     <header>
       <div id="logotipo">
-        <a href="index.html">
+        <a href="/index.html">
           <aside>
           <div class="logo">
-            <span>N</span><span>A</span><span>S</span><span>A</span>
-            <span>&nbsp;</span><span>&nbsp;</span><span>C</span>
+            <span>C</span>
             <span>&nbsp;</span><span class="planet left">&#129680;</span>
             <span>S</span><span>M</span><span class="planet right">&#129680;</span><span>S</span>
           </div>
@@ -36,16 +35,17 @@
       <span id="btnMenu"><i class="fas fa-bars"></i></span>
       <nav>
         <ul class="menu" id="menu">
+          <li><a href="/index.html">Sistema Solar INFO</a></li>
           <li><a href="/pages/sol.html">Sol</a></li>
-          <li><a href="./pages/mercurio.html">Mercurio</a></li>
-          <li><a href="./pages/venus.html">Venus</a></li>
-          <li><a href="./pages/tierra.html">Tierra</a></li>
-          <li><a href="./pages/luna.html">Luna</a></li>
-          <li><a href="./pages/marte.html">Marte</a></li>
-          <li><a href="./pages/jupiter.html">Júpiter</a></li>
-          <li><a href="./pages/saturno.html">Saturno</a></li>
-          <li><a href="./pages/urano.html">Urano</a></li>
-          <li><a href="./pages/neptuno.html">Neptuno</a></li>
+          <li><a href="/pages/mercurio.html">Mercurio</a></li>
+          <li><a href="/pages/venus.html">Venus</a></li>
+          <li><a href="/pages/tierra.html">Tierra</a></li>
+          <li><a href="/pages/luna.html">Luna</a></li>
+          <li><a href="/pages/marte.html">Marte</a></li>
+          <li><a href="/pages/jupiter.html">Júpiter</a></li>
+          <li><a href="/pages/saturno.html">Saturno</a></li>
+          <li><a href="/pages/urano.html">Urano</a></li>
+          <li><a href="/pages/neptuno.html">Neptuno</a></li>
         </ul>
       </nav>
     </header>
