--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     <div id="logotipo">
       <a href="index.html">
         <div class="logo">
-          <span>N</span>
-          <span>A</span>
-          <span>S</span>
-          <span>A</span>
-          <span>&nbsp</span>
-          <span>&nbsp</span>
+         
           <span>C</span>
           <span>&nbsp</span>
           <span class="planet left">&#129680;</span>
@@ -39,6 +34,8 @@
     <span id="btnMenu"><i class="fas fa-bars"></i></span>
     <nav>
       <ul class="menu" id="menu">
+        <li><a href="/Sistema solar 3d/index.html">Sistema Solar 3D</a></li>
+        <li><a href="./pages/sol.html">Sol</a></li>
         <li><a href="./pages/mercurio.html">Mercurio</a></li>
         <li><a href="./pages/venus.html">Venus</a></li>
         <li><a href="./pages/tierra.html">Tierra</a></li>
@@ -52,49 +49,57 @@
     </nav>
   </header>
   
-
   <main>
     <section id="contenido">
       <div id="planetaContenido">
         <div id="planeta">
           <div id="centrar">
-            <div id="sol"></div>
+            <img src="assets/images/sist.png" alt="">
           </div>
-          <div id="descripcionSol">
-            <p>El ardiente corazón de nuestro sistema solar</p>
-            <h1>EL SOL <span id="emojiSol">&#9728;</span></h1>
+          <div id="centrar">
+            <div id="descripcionSistemaSolar">
+              <h1>Sistema Solar</h1>
+            <center> <h2>El asombroso hogar de ocho planetas, lunas y otros cuerpos celestes</h2></center>
+            </div>
           </div>
         </div>
       </div>
-  
+
+      <!-- Introducción al sistema solar -->
       <article id="introduccion">
-        <p>El nombre <strong>Sol</strong> proviene del latín "sol", utilizado por los antiguos romanos para referirse al astro que iluminaba el día y era visto como un símbolo de vitalidad y poder. Desde tiempos inmemoriales, esta majestuosa estrella ha sido objeto de fascinación, guiando la vida en la Tierra bajo su cálido resplandor. Su energía incansable ha permitido que la vida prospere, brindándonos luz y calor a lo largo de los siglos.</p>
+        <p>
+          El <strong>Sistema Solar</strong> es nuestro vecindario cósmico, formado por el Sol en el centro y todo lo que está bajo su influencia gravitatoria, incluyendo los planetas, sus lunas, asteroides, cometas y otros cuerpos menores. 
+          El Sol, una estrella de tipo espectral G2V, domina el sistema, proveyendo luz y calor a los cuerpos celestes que lo orbitan, asegurando las condiciones necesarias para la vida en la Tierra.
+        </p>
       </article>
-  
+
+      <!-- Características del Sistema Solar -->
       <article id="caracteristicas">
-        <h2>CARACTERÍSTICAS</h2>
+        <h2>CARACTERÍSTICAS DEL SISTEMA SOLAR</h2>
         <ul>
-          <li>Se clasifica como una estrella de tipo espectral <strong>G2</strong> y pertenece a la clase de luminosidad <strong>V</strong>, lo que se representa como una estrella "G2V".</li>
-          <li>El diámetro del Sol es de aproximadamente <strong>1.4 millones de kilómetros</strong>, aunque esta medida puede variar ligeramente debido a las fluctuaciones en la actividad solar.</li>
-          <li>La distancia desde el centro del Sol hasta su superficie, es decir, su radio, es de aproximadamente <strong>696,340 kilómetros</strong>.</li>
-          <li>La edad del Sol es de aproximadamente <strong>4.5 mil millones de años</strong>.</li>
-          <li>La composición aproximada del Sol es de alrededor del <strong>74% de hidrógeno</strong> y cerca del <strong>24% de helio</strong>, con el resto compuesto de elementos en pequeñas cantidades.</li>
+          <li>El Sistema Solar tiene <strong>8 planetas principales</strong>: Mercurio, Venus, Tierra, Marte, Júpiter, Saturno, Urano y Neptuno.</li>
+          <li>Además de los planetas, hay <strong>planetas enanos</strong> como Plutón, Eris y Ceres, y un cinturón de asteroides entre Marte y Júpiter.</li>
+          <li>El diámetro del Sistema Solar es de aproximadamente <strong>1 año luz</strong>.</li>
+          <li>El Sol contiene aproximadamente el <strong>99.86%</strong> de la masa total del Sistema Solar.</li>
+          <li>Los planetas terrestres son rocosos, mientras que los planetas gigantes y gigantes de hielo están compuestos de gases y hielos.</li>
+          <li>El cinturón de Kuiper y la nube de Oort contienen cuerpos helados y cometas en los confines del sistema.</li>
         </ul>
-        <div id="foto"></div>
+        <div id="fotoSistemaSolar"></div>
       </article>
-  
+
+      <!-- Curiosidades del Sistema Solar -->
       <article id="curiosidades">
-        <h2>CURIOSIDADES</h2>
+        <h2>CURIOSIDADES DEL SISTEMA SOLAR</h2>
         <ul>
-          <li><strong>Ciclos solares:</strong> El Sol atraviesa un ciclo de actividad de aproximadamente <strong>11 años</strong>, marcado por fluctuaciones en la cantidad de manchas solares, erupciones y eyecciones de masa coronal.</li>
-          <li><strong>Temperaturas extremas:</strong> La temperatura en la superficie solar es de alrededor de <strong>5,778 grados Kelvin</strong>, mientras que en su núcleo, se alcanzan <strong>15 millones de grados Kelvin</strong>.</li>
-          <li><strong>Gravedad poderosa:</strong> La gravedad del Sol es uno de los factores que mantiene el sistema solar en equilibrio, con una aceleración gravitacional de <strong>274 m/s²</strong> en su superficie.</li>
-          <li><strong>Energía solar:</strong> Además de ser vital para la vida, el Sol es la principal fuente de energía renovable en la Tierra.</li>
+          <li><strong>Júpiter</strong> es el planeta más grande con un diámetro de alrededor de <strong>143,000 km</strong>.</li>
+          <li><strong>Agua fuera de la Tierra:</strong> Hay indicios de océanos en las lunas de Júpiter y Saturno.</li>
+          <li><strong>El Sistema Solar se mueve</strong> a través de la Vía Láctea a una velocidad de <strong>828,000 km/h</strong>.</li>
+          <li>Los anillos de <strong>Saturno</strong> son los más espectaculares del sistema.</li>
+          <li>El cinturón de asteroides está entre Marte y Júpiter, pero los asteroides están muy separados.</li>
         </ul>
       </article>
     </section>
   </main>
-  
   <footer>
     <div id="contenidoFooter">
       <div id="creditos">
@@ -110,6 +115,30 @@
         <li class="icon github">
           <span class="tipo">Esteban</span>
           <a href="https://github.com/dolaraso"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">Gabriel</span>
+          <a href="https://github.com/NotSilverx"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">marco</span>
+          <a href="https://github.com/GEOEC/"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">javier</span>
+          <a href="https://github.com/JavierDb13"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">matew</span>
+          <a href="https://github.com/KomiGath"><span><i class="fab fa-github"></i></span></a>
         </li>
       </ul>
       <div id="mapa">
