--- a/pages/sol.html
+++ b/pages/sol.html
@@ -14,14 +14,9 @@
 <body>
   <header>
     <div id="logotipo">
-      <a href="sol.html">
+      <a href="/index.html">
         <div class="logo">
-          <span>N</span>
-          <span>A</span>
-          <span>S</span>
-          <span>A</span>
-          <span>&nbsp</span>
-          <span>&nbsp</span>
+        
           <span>C</span>
           <span>&nbsp</span>
           <span class="planet left">&#129680;</span>
@@ -38,6 +33,7 @@
     <span id="btnMenu"><i class="fas fa-bars"></i></span>
     <nav>
       <ul class="menu" id="menu">
+        <li><a href="/index.html">Sistema Solar INFO</a></li>
         <li><a href="/pages/mercurio.html">Mercurio</a></li>
         <li><a href="/pages/venus.html">Venus</a></li>
         <li><a href="/pages/tierra.html">Tierra</a></li>
@@ -108,6 +104,30 @@
         <li class="icon github">
           <span class="tipo">Esteban</span>
           <a href="https://github.com/dolaraso"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">Gabriel</span>
+          <a href="https://github.com/NotSilverx"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">marco</span>
+          <a href="https://github.com/GEOEC/"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">javier</span>
+          <a href="https://github.com/JavierDb13"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">matew</span>
+          <a href="https://github.com/KomiGath"><span><i class="fab fa-github"></i></span></a>
         </li>
       </ul>
       <div id="mapa">
