--- a/pages/neptuno.html
+++ b/pages/neptuno.html
@@ -115,27 +115,45 @@
       <div id="creditos">
         <p>CRÉDITOS</p>
         <p>
-            Proyecto: Create an Orrery Web App that Displays Near-Earth Objects
-            Evento: NASA Space Apps Challenge 2024
-  
-             Participantes:
-  
-            Estudiantes de Ingeniería en Ciberseguridad y Biotecnología
-            Universidad de las Américas, Ecuador
+          Proyecto: Create an Orrery Web App that Displays Near-Earth Objects<br>
+          Evento: NASA Space Apps Challenge 2024<br>
+          Participantes:<br>
+          Estudiantes de Ingeniería en Ciberseguridad de cuarto semestre en la Universidad de las Américas, Ecuador
         </p>
-    </div>
+      </div>
       <ul class="wrapper">
         <li class="icon github">
           <span class="tipo">Esteban</span>
           <a href="https://github.com/dolaraso"><span><i class="fab fa-github"></i></span></a>
         </li>
       </ul>
-      <div class="mapa">
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">Gabriel</span>
+          <a href="https://github.com/NotSilverx"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">marco</span>
+          <a href="https://github.com/GEOEC/"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">javier</span>
+          <a href="https://github.com/JavierDb13"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <ul class="wrapper">
+        <li class="icon github">
+          <span class="tipo">matew</span>
+          <a href="https://github.com/KomiGath"><span><i class="fab fa-github"></i></span></a>
+        </li>
+      </ul>
+      <div id="mapa">
         <p>UBICACIÓN</p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15959.209051485901!2d-78.4592182!3d-0.1625548!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590136d487c2f%3A0x494de438292c29b3!2sUniversidad%20de%20Las%20Am%C3%A9ricas%20-%20Campus%20UDLAPARK!5e0!3m2!1ses-419!2sec!4v1727583609179!5m2!1ses-419!2sec1"
-          width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15959.209051485901!2d-78.4592182!3d-0.1625548!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590136d487c2f%3A0x494de438292c29b3!2sUniversidad%20de%20Las%20Am%C3%A9ricas%20-%20Campus%20UDLAPARK!5e0!3m2!1ses-419!2sec!4v1727583609179!5m2!1ses-419!2sec1" width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </footer>
