--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </a>
       <div id="logoCentro">
-        <a href="https://www.udla.edu.ec/" target="_blank"><img src="assets/images/udla.png" alt="Logo UDLA"></a>
+        <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png" alt="Logo UDLA"></a>
       </div>
     </div>
     <span id="btnMenu"><i class="fas fa-bars"></i></span>
