--- a/pages/saturno.html
+++ b/pages/saturno.html
@@ -32,7 +32,7 @@
           src="../assets/images/reinoUnido1.webp" alt="English"></button>
     </div>-->
     <div id="logoCentro">
-      <a href="https://www.udla.edu.ec/" target="_blank"><img src="assets/images/udla.png"
+      <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png"
           alt="Logo IES Juan Bosco"></a>
     </div>
 
