--- a/pages/urano.html
+++ b/pages/urano.html
@@ -43,7 +43,7 @@
       <div id="logoCentro">
         <a href="https://www.udla.edu.ec/" target="_blank"
           ><img
-            src="assets/images/udla.png"
+            src="/assets/images/udla.png"
             alt="Logo IES Juan Bosco"
         /></a>
       </div>
