--- a/pages/venus.html
+++ b/pages/venus.html
@@ -25,7 +25,7 @@
         <span>S</span>
       </div></a>
       <div id="logoCentro">
-        <a href="https://www.udla.edu.ec/" target="_blank"><img src="assets/images/udla.png"
+        <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png"
             alt="Logo IES Juan Bosco"></a>
       </div>
     </header>
