--- a/pages/marte.html
+++ b/pages/marte.html
@@ -33,7 +33,7 @@
       </button>
     </div>-->
     <div id="logoCentro">
-      <a href="https://www.udla.edu.ec/" target="_blank"><img src="assets/images/udla.png"
+      <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png"
           alt="Logo IES Juan Bosco" /></a>
     </div>
   </header>
