--- a/Sistema solar 3d/index.html
+++ b/Sistema solar 3d/index.html
@@ -39,13 +39,15 @@
           <li><a href="/pages/sol.html">Sol</a></li>
           <li><a href="/pages/mercurio.html">Mercurio</a></li>
           <li><a href="/pages/venus.html">Venus</a></li>
-          <li><a href="/pages/tierra.html">Tierra</a></li>
+          <li><a href="/pages/tierra.html">Tierra</a></li>  
+          <li><a href="/asteroides/index.html">NEAs</a></li>
           <li><a href="/pages/luna.html">Luna</a></li>
           <li><a href="/pages/marte.html">Marte</a></li>
           <li><a href="/pages/jupiter.html">Júpiter</a></li>
           <li><a href="/pages/saturno.html">Saturno</a></li>
           <li><a href="/pages/urano.html">Urano</a></li>
           <li><a href="/pages/neptuno.html">Neptuno</a></li>
+        
         </ul>
       </nav>
     </header>
