--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="./pages/mercurio.html">Mercurio</a></li>
         <li><a href="./pages/venus.html">Venus</a></li>
         <li><a href="./pages/tierra.html">Tierra</a></li>
+       <li><a href="./asteroides/index.html">NEAs</a></li>
         <li><a href="./pages/luna.html">Luna</a></li>
         <li><a href="./pages/marte.html">Marte</a></li>
         <li><a href="./pages/jupiter.html">Júpiter</a></li>
