--- a/pages/venus.html
+++ b/pages/venus.html
@@ -26,7 +26,7 @@
       </div></a>
       <div id="logoCentro">
         <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png"
-            alt="Logo IES Juan Bosco"></a>
+            alt="udla"></a>
       </div>
     </header>
     <main>
