--- a/pages/marte.html
+++ b/pages/marte.html
@@ -34,7 +34,7 @@
     </div>-->
     <div id="logoCentro">
       <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png"
-          alt="Logo IES Juan Bosco" /></a>
+          alt="udla" /></a>
     </div>
   </header>
   <main>
