--- a/pages/tierra.html
+++ b/pages/tierra.html
@@ -27,7 +27,7 @@
     </a>
     <div id="logoCentro">
       <a href="https://www.udla.edu.ec/" target="_blank"><img src="/assets/images/udla.png"
-          alt="Logo IES Juan Bosco"></a>
+          alt="udla"></a>
     </div>
   </header>
   <main>
